Fixed alignment in profile

--- a/beauty-ui/src/components/Profile/Profile.css
+++ b/beauty-ui/src/components/Profile/Profile.css
@@ -5,69 +5,65 @@
 }
 .profile{
     padding-top:5%;
-    display: flex;
-    justify-content: space-around;
-   
+    display: inline-grid;
 }
 
 .info{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    grid-column: 1;
+    grid-row:1;
+    display: block;
+    padding:5%;
     text-align: center;
+    margin:auto;
+    
+}
+.user{
+    grid-column:2;
+    grid-row:1;
+    padding:5%;
+    
 }
 .avatar{
-    text-align: center;
-    width:fit-content;
-    height:fit-content;
-    padding:5%;
-    justify-content: center;
+    order:-1;
+   
+}
+.user-info{
+    display:block;
+  
+}
+.user{
+   display:block;
 
 }
 .welcome{
     font-family: 'Arima Madurai', cursive;
     height:fit-content;
-    margin-left:-20%; 
-}
-.user-info{
-    text-align: center;
-    width:fit-content;
-    height:fit-content;
-    padding:2%;
-    justify-content: center;
-}
-.row{
-    display: inline-grid;
-    align-items: center;
-    margin-left:-70%;
-    padding:5%;
+  
+   
     
+   
+    
+}
+.points{
+   
+   
+}
+.products{
+    display:inline-grid;
+    padding:5%;
 }
 .donations{
     grid-column: 1;
-    grid-row:2;
-    padding:5%;
-    height:fit-content;
-    padding:5%;
+    grid-row:1;
+    padding-right:5%;
    
 }
 .recycled{
     grid-column: 2;
-    grid-row:2;
-    padding: 5%;
-    height: fit-content;
-    padding:5%;
+    grid-row:1;
+    padding-left:5%;
     
 }
-.row-info{
- padding:10%;
-    background: navy
-
-}
-/* .info{
-    display:inline-grid;
-    text-align: center;
-} */
 .number{
     font-family : 'Arima Madurai', cursive ;
 }
